# openipc-mail-send

./: .gitignore  Cargo.toml  Dockerfile  README.md  build-package.sh  build.sh  docker-build.sh  mail-send
.cargo/: config.toml
.github/workflows/: build-package.yml
mail-send-rs/: Cargo.toml  Dockerfile  README.md  docker-build.sh
mail-send-rs/src/: main.rs
openipc/: add-email-menu.sh  add-mail-menu.sh  email-snapshot  email-snapshot.conf.example  ext-email.cgi  ext-mail.cgi  mail  mail-snapshot  mail-snapshot.conf.example  mail.conf.example
src/: main.rs
