[package]
name = "email-send"
version = "0.1.0"
edition = "2021"
description = "CLI tool to send emails with attachments via SMTP"

[dependencies]
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls", "builder"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
clap = { version = "4", features = ["derive"] }
mime_guess = "2"

# Pin psm to avoid ar_archive_writer dependency that requires nightly Rust
psm = "=0.1.23"

[profile.release]
opt-level = "z"
lto = true
strip = true
